promote: colour instead of color

--- a/content/support/promote.html
+++ b/content/support/promote.html
@@ -16,7 +16,7 @@ them to promote the event</p>
         <tr>
           <%
             {
-              flyer_color: 'black',
+              flyer_colour: 'black',
               flyer_nobg: 'white',
               flyer_greyscale: 'greyscale',
             }.each do |name, color|
