--- a/content/interviews.html
+++ b/content/interviews.html
@@ -14,7 +14,7 @@ navtitle: Interviews
 <h2><%= year %></h2>
 <ul>
     <% items.sort_by{|i| i[:person]}.each do |item| %>
-    <li><a href="<%= relpath(@item_rep.path, item.identifier) %>"><%= item[:person] %><% if item[:topic] %>: <%= item[:topic] %><% end %></a></li>
+    <li><a href="<%= pathof item.identifier %>"><%= item[:person] %><% if item[:topic] %>: <%= item[:topic] %><% end %></a></li>
     <% end %>
 </ul>
 <% end %>
