beerevent: fix Jochen's contact link

--- a/content/practical/beerevent.html
+++ b/content/practical/beerevent.html
@@ -147,7 +147,7 @@ opportunity to taste some of the finest
 <h2>Contact and location</h2>
 <p>
   If you manage to get lost somehow, despite this handy little map, <a
-  href="http://blog.sejo.be/about/">call Jochen</a>.
+  href="https://sejo-it.be/">call Jochen</a>.
   He might not be able to help you find the way, but he should be able to find
   someone who can!  <code>:-)</code>
 </p>
