--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -5,5 +5,6 @@ navcat: true
 <h3>Before the Event</h3>
 <ul>
     <li><%= l('/practical/accommodation/') %></li>
+    <li><%= l('/practical/beerevent/') %></li>
     <li><%= l('/practical/transportation/') %></li>
 </ul>
