lightning talks: fix spelling, copy-edit

--- a/content/schedule/devrooms/lightning_talks.html
+++ b/content/schedule/devrooms/lightning_talks.html
@@ -1,7 +1,15 @@
 <p>
-Lightning Talks are sweet and focussed 15-minute talks on a wide variety of open source topics.
+  Lightning talks are short and focused talks on a wide variety of open source
+  topics.
 </p>
 
 <p>
-Our goal is to offer all the projects that do not fit in a specific main track or devroom the opportunity to speak. During exactly 15 minutes, one person gets to present the project or any aspect of it. All the lightning talks happen in a large room that can host up to 300 people.
+  The goal is to showcase projects which do not fit in a specific main track or
+  developer room.  Speakers get exactly fifteen minutes to present their project
+  or any aspect of it.
+</p>
+
+<p>
+  All lightning talks are scheduled in a large auditorium seating approximately
+  300 people.
 </p>
