--- a/content/schedule/devrooms/hpc_and_computational_science.html
+++ b/content/schedule/devrooms/hpc_and_computational_science.html
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-  The devroom organization is taken care of by the <a href="http://www.ugent.be/hpc/en">HPC team of Ghent University</a>
+  The devroom organisation is taken care of by the <a href="http://www.ugent.be/hpc/en">HPC team of Ghent University</a>
   (<a href="http://twitter.com/HPCUGent">@HPCUGent</a>), in collaboration with the
   <a href="https://vscentrum.be/nl/en">Flemish Supercomputer Centre (VSC)</a>.
 </p>
