stands: OSGeo abbr

--- a/content/stands.html
+++ b/content/stands.html
@@ -15,7 +15,7 @@ stands:
    - Libre Graphics magazine: http://libregraphicsmag.com
    - Mageia: http://mageia.org
    - Mozilla: http://www.mozilla.org/
-   - Open Source Geospatial Foundation: http://osgeo.org
+   - Open Source Geospatial Foundation (OSGeo): http://osgeo.org
    - OpenMandriva: http://openmandriva.org
    - OpenShift Origin: http://openshift.github.io
    - OpenStack: http://openstack.org
