Add building map to building page

--- a/content/schedule/buildings.html
+++ b/content/schedule/buildings.html
@@ -1,5 +1,6 @@
 ---
 title: Buildings
+forcepagelinks: true
 ---
 <p>
 The various sessions are spread over several buildings (clusters of rooms)
@@ -30,4 +31,8 @@ Here is a list of those buildings, and the rooms in each of them.
     <% end %>
   </tbody>
 </table>
+
+      <div class="map">
+        <img style="display: block; margin-left: auto; margin-right: auto" src="asset:campusmap" alt="ULB Solbosch Campus map" title="ULB Solbosch Campus map"}/>
+      </div>
 
