--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -118,6 +118,16 @@ You can park here at your own risk.
 Do not leave any valuables in your car!
 </p>
 
+<p>
+The parking of the campus can be very busy since early morning
+during both days. An alternative is to leave your car in the 
+<a href="http://www.interparking.be/find-parking/Sablon-Poelaert/n-Poelaert/">
+Parking Sablon-Polaert</a>, from there to take the 
+<a href="http://stib.be/appl/EN/40000Eng/T/40094E.htm">tram 94</a>, 
+direction Herrmann-Debroux, then get off at stop <u>ULB</u>.
+</p>
+
+
 <a name="plane"></a><h3>By plane</h3>
 <p>
 From Brussels International Airport, located in <b>Zaventem</b> (about 50 minutes):
