about: update staff list
Update of the staff list according to the wiki.

--- a/content/about.html
+++ b/content/about.html
@@ -104,32 +104,30 @@ navtitle: About
     <a name="team"></a><h2>The team</h2>
     <small>in alphabetical order</small>
     <ul>
-      <li>Alain Buret</li>
-      <li>Alasdair Kergon</li>
-      <li>Bart Weijs</li>
-      <li>Daniele Lacamera</li>
-      <li>Geert Goossens</li>
+      <li>Annelies Bollen</li>
       <li>Gerry Demaret</li>
-      <li>Jan-Frederik Martens</li>
-      <li>Jan Gyselinck</li>
-      <li>Jochen Maes</li>
-      <li>Juan Rial</li>
-      <li>Koen Vervloesem</li>
-      <li>Leandro Doctors</li>
-      <li>Mark Van den Borre</li>
       <li>Michael De Swert</li>
-      <li>Nicolas Daisomont</li>
-      <li>Nicole Horward</li>
-      <li>Pascal Bleser</li>
-      <li>Philip Paeps</li>
       <li>Philippe De Swert</li>
-      <li>Pieter Heremans</li>
-      <li>Richard Hartmann</li>
-      <li>Stella Rouzi</li>
+      <li>Geert Goossens</li>
       <li>Tias Guns</li>
+      <li>Jan Gyselinck</li>
+      <li>Richard Hartmann</li>
+      <li>Job Joossen</li>
+      <li>Alasdair Kergon</li>
+      <li>Daniele Lacamera</li>
+      <li>Niels Laukens</li>
+      <li>Koert Loret</li>
+      <li>Jochen Maes</li>
+      <li>Jan-Frederik Martens</li>
+      <li>Philip Paeps</li>
+      <li>Juan Rial</li>
+      <li>Stella Rouzi</li>
       <li>Wouter Simons</li>
-      <li>Wouter Verhelst</li>
       <li>Wynke Stulemeijer</li>
+      <li>Mark Van den Borre</li>
+      <li>Wouter Verhelst</li>
+      <li>Koen Vervloesem</li>
+      <li>Bart Weijs</li>
       <li>The many volunteers who help out during the weekend</li>
       <li>...</li>
     </ul>
