news/sightseeing: recycle and announce

--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -8,3 +8,8 @@ navcat: true
     <li><%= l('/practical/beerevent/') %></li>
     <li><%= l('/practical/transportation/') %></li>
 </ul>
+
+<h3>During the Event</h3>
+<ul>
+    <li><%= l('/practical/sightseeing/') %></li>
+</ul>
