--- a/content/practical/sightseeing.html
+++ b/content/practical/sightseeing.html
@@ -26,7 +26,7 @@ aliases: /sightseeing
 
 <div class="container-fluid">
 <div class="row-fluid">
-<div class="span6">
+<div class="span8">
 
 <table class="table table-condensed table-striped table-bordered">
   <thead>
@@ -40,15 +40,15 @@ aliases: /sightseeing
   <tbody>
     <tr>
       <th>Saturday</th>
-      <td>tba</td>
-      <td>14:00</td>
-      <td>18:30</td>
+      <td>TBA</td>
+      <td>TBA (around 14:00)</td>
+      <td>TBA (around 18:30)</td>
     </tr>
     <tr>
       <th>Sunday</th>
-      <td>tba</td>
-      <td>12:15</td>
-      <td>15:45</td>
+      <td>TBA</td>
+      <td>TBA (around 12:15)</td>
+      <td>TBA (around 15:45)</td>
     </tr>
   </tbody>
 </table>
