sightseeing: add schedule & destinations
The data in the schedule and the destinations are based on info I
received from Daniele.

--- a/content/practical/sightseeing.html
+++ b/content/practical/sightseeing.html
@@ -26,7 +26,7 @@ aliases: /sightseeing
 
 <div class="container-fluid">
 <div class="row-fluid">
-<div class="span8">
+<div class="span6">
 
 <table class="table table-condensed table-striped table-bordered">
   <thead>
@@ -40,15 +40,15 @@ aliases: /sightseeing
   <tbody>
     <tr>
       <th>Saturday</th>
-      <td>TBA</td>
-      <td>TBA (around 14:00)</td>
-      <td>TBA (around 18:30)</td>
+      <td>Infodesk H</td>
+      <td>14:00</td>
+      <td>18:30</td>
     </tr>
     <tr>
       <th>Sunday</th>
-      <td>TBA</td>
-      <td>TBA (around 12:15)</td>
-      <td>TBA (around 15:45)</td>
+      <td>Infodesk H</td>
+      <td>12:15</td>
+      <td>15:45</td>
     </tr>
   </tbody>
 </table>
@@ -95,10 +95,21 @@ aliases: /sightseeing
     <span>&copy; <a href="http://creativecommons.org/licenses/by-sa/2.0/" rel="license">CC-BY-SA-2.0</a> by <a href="https://secure.flickr.com/photos/johnkarakatsanis/4426286555/">John Karakatsanis</a></span>
 </div>
 
-<div class="label label-info">
-The destinations of the sightseeing tours for <%= conference[:title] %>
-are yet to be announced.
-</div>
+<h2>Destinations</h2>
+
+<p>
+   <b>Saturday:</b>
+   A tramride to the centre of Brussels followed by a guided tour in de
+   Marollen, a part of the city centre where a lot of social housing is to be
+   found, but also with an interesting mix of rather poor people living in
+   the same neighbourhood as the very rich.
+</p>
+
+<p>
+  <b>Sunday:</b>
+  A walk in the neighbourhood of the Congress, namely the walk we have
+  organised two years ago: Solbosch and the forest of Terkameren.
+</p>
 
 <p>
   To register, or if you have any questions about the sightseeing tours, please
