transportation: update links to stib.be

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -53,14 +53,14 @@ the time.
 <p>Metro/tram/bus lines provided by the public transport company, STIB/MIVB.</p>
 <dl>
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?linecode=71&amp;x=14&amp;y=12&amp;l=en&amp;fmodule=s&amp;results=s" 
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71" 
      title="STIB/MIVB - Bus 71">Bus 71</a></strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>De Brouckere</strong> in central Brussels towards <strong>Delta</strong></li>
 <li><strong>Stop: </strong>ULB</li>
 </ul></dd>
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?linecode=94&amp;x=7&amp;y=11&amp;l=en&amp;fmodule=s&amp;results=s" 
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94" 
      title="STIB/MIVB - Tram 94">Tram 94</a>
 </strong></dt>
 <dd><ul>
@@ -69,7 +69,7 @@ the time.
 </ul></dd>
 
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?linecode=25&amp;x=14&amp;y=9&amp;l=en&amp;fmodule=s&amp;results=s" 
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=25" 
      title="STIB/MIVB - Tram 25">Tram 25</a>
 </strong></dt>
 <dd><ul>
@@ -85,20 +85,20 @@ All of them stop at "ULB".<br/>
 <a name="train"></a><h3>By train</h3>
 <p>From <strong>Brussels South</strong> (a.k.a. "<strong>Bruxelles Midi</strong>", "<strong>Brussel Zuid</strong>" or "<strong>Gare du Midi</strong>") Station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
-<li>Take the <a href="http://stib.be/appl/EN/40000Eng/M/40002E.htm">Metro line 2</a>, direction Simonis (Elisabeth)</li>
+<li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=M&linecode=2">Metro line 2</a>, direction Simonis (Elisabeth)</li>
 <li>Get off at station <u>Louise</u></li>
-<li>Take the <a href="http://stib.be/appl/EN/40000Eng/T/40094E.htm">tram 94</a>, direction Herrmann-Debroux</li>
+<li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, direction Herrmann-Debroux</li>
 <li>Get off at stop <u>ULB</u>.</li></ul></p>
 <br />
 <p>From <strong>Brussels Central</strong> ("<strong>Bruxelles Central</strong>", "<strong>Brussel Centraal</strong>" or "<strong>Gare Centrale</strong>") station (about <strong>20 minutes</strong>):
 <ul style="margin-top:0">
-<li>Take <a href="http://stib.be/appl/EN/40000Eng/B/40071E.htm">Bus 71</a>, direction Delta</li>
+<li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71">Bus 71</a>, direction Delta</li>
 <li>Get off at stop <u>ULB</u>.</li>
 </ul></p>
 <br />
 <p>From <strong>Brussels North</strong> ("<strong>Bruxelles Nord</strong>" or "<strong>Gare du Nord</strong>") station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
-<li>Take <a href="http://stib.be/appl/EN/40000Eng/T/40025E.htm">Tram 25</a>, direction Boondael Gare</li>
+<li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=25">Tram 25</a>, direction Boondael Gare</li>
 <li>Get off at stop <u>ULB</u>.</li></ul></p>
 <p>From <strong>Etterbeek</strong> station (about <strong>20 minutes</strong> (walk)):
 <ul style="margin-top:0">
@@ -123,7 +123,7 @@ The parking of the campus can be very busy since early morning
 during both days. An alternative is to leave your car in the 
 <a href="http://www.interparking.be/find-parking/Sablon-Poelaert/n-Poelaert/">
 Parking Sablon-Polaert</a>, from there to take the 
-<a href="http://stib.be/appl/EN/40000Eng/T/40094E.htm">tram 94</a>, 
+<a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, 
 direction Herrmann-Debroux, then get off at stop <u>ULB</u>.
 </p>
 
@@ -134,7 +134,7 @@ From Brussels International Airport, located in <b>Zaventem</b> (about 50 minute
 <ul style="margin-top:0">
 <li>Take the <u>train</u> to Brussels</li>
 <li>Get off at <u>Brussels Central</u> station</li>
-<li>Take <a href="http://stib.be/appl/EN/40000Eng/B/40071E.htm">Bus 71</a>, direction Delta</li>
+<li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71">Bus 71</a>, direction Delta</li>
 <li>Get off at stop <u>ULB</u>.</li>
 </ul>
 </p>
@@ -148,16 +148,16 @@ From Brussels International Airport, located in <b>Zaventem</b> (about 50 minute
 <li><a target="_blank" href="http://www.ulb.be/campus/solbosch/solbosch-public-transports.html"
        title="Instructions on ULB website on how to get to the Solbosch campus">
       ULB: Getting to the Solbosch</a></li>
-<li><a target="_blank" href="http://stib.be/guide_gids.html?guest_user=guest_en"
-       title="Passenger Guidelines issued by STIB/MIVB">
-      STIB/MIVB: Passenger Guidelines</a></li>
-<li><a target="_blank" href="http://stib.be/tickets.html?guest_user=guest_en"
-       title="STIB/MIVB: Ticket Types">STIB/MIVB: Ticket Types
+<li><a target="_blank" href="http://www.stib.be/guide_gids_new.html?l=en"
+       title="Traveller's guide issued by STIB/MIVB">
+      STIB/MIVB: Traveller's guide</a></li>
+<li><a target="_blank" href="http://www.stib.be/abon_tickets.html?l=en"
+       title="STIB/MIVB: Tickets and fares">STIB/MIVB: Tickets and fares
       </a></li>
-<li><a target="_blank" href="http://stib.be/reisweg-itineraire.html?l=en"
+<li><a target="_blank" href="http://www.stib.be/reisweg-itineraire.html?l=en"
        title="STIB/MIVB: Journey Planner">STIB/MIVB: Journey Planner
       </a></li>
-<li><a target="_blank" href="http://stib.be/airport-line.html?l=en"
+<li><a target="_blank" href="http://www.stib.be/airport-line.html?l=en"
        title="STIB/MIVB: Airport Line">STIB/MIVB: Airport Line
       </a></li>
 </ul>
@@ -165,7 +165,7 @@ From Brussels International Airport, located in <b>Zaventem</b> (about 50 minute
 <hr />
 <h2>Maps</h2>
 <ul>
-<li><a href="http://stib.be/netplan-plan-reseau.html?l=en">Map of the Metro/Tram/Bus Network in Brussels</a></li>
+<li><a href="http://www.stib.be/netplan-plan-reseau.html?l=en">Map of the Metro/Tram/Bus Network in Brussels</a></li>
 <li><a href="http://upload.wikimedia.org/wikipedia/commons/8/85/Metro_Brussels.svg">Map of Metro stations in Brussels (SVG)</a></li>
 <li><a href="http://homepage.univie.ac.at/horst.prillinger/metro/m/brussel.html">Map of Tram Network in Brussels</a></li>
 </ul>
