mobile: add FOSDEM Compagnion

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -20,12 +20,23 @@ It is pretty hefty (a bit over 600kb in size) but includes everything when fetch
 </p>
 UNFINISHED!! -->
 
+<h3>Apps for Mobile Devices, tested for 2014</h3>
+<ul>
+<li><b>Android: FOSDEM Companion</b><br />
+    <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
+    Available from the <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">android market</a>.<br />
+</li>
+</ul>
+
+<p>
+Others? Or tested one of the below for this year? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
+</p>
 
 <h3>Apps for Mobile Devices, tested for 2013</h3>
 <ul>
 <li><b>Android: Giggity</b><br />
     <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
-    Available from the android market,<br />
+    Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">android market</a>,<br />
     Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
 </li>
 <li><b>Android: fosdem-android</b><br />
@@ -49,7 +60,6 @@ UNFINISHED!! -->
     Available from <a href="https://itunes.apple.com/gb/app/fosdem/id595196580?mt=8">the Apple market</a>.<br />
 </li>
 </ul>
-Others? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
 
 
 <h3>Apps for Mobile Devices, archive from 2012 and before</h3>
