--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -31,6 +31,12 @@ UNFINISHED!! -->
     Available in official Debian, Ubuntu and Maemo5 repositories,<br />
     (the successor of <a href="http://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>).<br />
 </li>
+<li><b>Android: fosdem-android</b><br />
+    <a href="https://sourceforge.net/projects/fosdem-android">Source code</a>,<br />
+    <a href="https://github.com/rkallensee/fosdem-android">Github fork of 2013</a>,<br />
+    Direct <a href="http://forge.webpresso.net/projects/fosdem-android/files">apk download</a>,<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=org.fosdem">the android market</a>.<br />
+</li>
 </ul>
 
 <p>
@@ -43,12 +49,6 @@ Others? Or tested one of the below for this year? Let us know on our public mail
     <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
     Available from the <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">android market</a>,<br />
     Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
-</li>
-<li><b>Android: fosdem-android</b><br />
-    <a href="https://sourceforge.net/projects/fosdem-android">Source code</a>,<br />
-    <a href="https://github.com/rkallensee/fosdem-android">Github fork for 2013</a>,<br />
-    Direct <a href="http://forge.webpresso.net/projects/fosdem-android/files">apk download</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=org.fosdem">the android market</a>.<br />
 </li>
 <li><b>WebOS: fosdem-webos</b><br />
     <a href="http://forge.webpresso.net/projects/fosdem-webos">Website and source code</a>,<br />
