transportation: reflect reality
Correct spelling, sort, add bus 72

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -45,37 +45,42 @@ sponsors_under_navigation: true
 
 <a name="bus"></a><h3>By bus and/or tram</h3>
 
-<div class="label label-info">
-This information may be outdated by February 2014 and will be updated closer to
-the time.
-</div>
-
 <p>Metro/tram/bus lines provided by the public transport company, STIB/MIVB.</p>
 <dl>
-<dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71" 
-     title="STIB/MIVB - Bus 71">Bus 71</a></strong></dt>
-<dd><ul>
-<li><strong>Direction: </strong>From <strong>De Brouckere</strong> in central Brussels towards <strong>Delta</strong></li>
-<li><strong>Stop: </strong>ULB</li>
-</ul></dd>
-<dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94" 
-     title="STIB/MIVB - Tram 94">Tram 94</a>
-</strong></dt>
-<dd><ul>
-<li><strong>Direction: </strong>From <strong>Stade</strong> through central Brussels towards <strong>Mus&eacute;e du Tram</strong></li>
-<li><strong>Stop: </strong>ULB</li>
-</ul></dd>
-
 <dt><strong>
   <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=25" 
      title="STIB/MIVB - Tram 25">Tram 25</a>
 </strong></dt>
 <dd><ul>
-<li><strong>Direction: </strong>From <strong>Rogier</strong> (near <strong>Gare du Nord</strong>) towards <strong>Boondaal Station</strong></li>
+<li><strong>Direction: </strong>From <strong>Rogier</strong> (near <strong>Gare du Nord</strong>) towards <strong>Boondael Gare</strong></li>
 <li><strong>Stop: </strong>ULB</li>
 </ul></dd>
+
+<dt><strong>
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71" 
+     title="STIB/MIVB - Bus 71">Bus 71</a></strong></dt>
+<dd><ul>
+<li><strong>Direction: </strong>From <strong>De Brouck&egrave;re</strong> in central Brussels towards <strong>Delta</strong></li>
+<li><strong>Stop: </strong>ULB</li>
+</ul></dd>
+
+<dt><strong>
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=72" 
+     title="STIB/MIVB - Bus 72">Bus 72</a></strong></dt>
+<dd><ul>
+<li><strong>Direction: </strong>From <strong>ADEPS</strong> towards <strong>Dev&egrave;ze-ULB</strong></li>
+<li><strong>Stop: </strong>ULB</li>
+</ul></dd>
+
+<dt><strong>
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94" 
+     title="STIB/MIVB - Tram 94">Tram 94</a>
+</strong></dt>
+<dd><ul>
+<li><strong>Direction: </strong>From <strong>Louise</strong> towards <strong>Mus&eacute;e du Tram</strong></li>
+<li><strong>Stop: </strong>ULB</li>
+</ul></dd>
+
 </dl>
 
 <p>
@@ -85,9 +90,9 @@ All of them stop at "ULB".<br/>
 <a name="train"></a><h3>By train</h3>
 <p>From <strong>Brussels South</strong> (a.k.a. "<strong>Bruxelles Midi</strong>", "<strong>Brussel Zuid</strong>" or "<strong>Gare du Midi</strong>") Station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
-<li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=M&linecode=2">Metro line 2</a>, direction Simonis (Elisabeth)</li>
+<li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=M&linecode=2">Metro line 2</a></li>
 <li>Get off at station <u>Louise</u></li>
-<li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, direction Herrmann-Debroux</li>
+<li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, direction Mus&eacute;e du Tram</li>
 <li>Get off at stop <u>ULB</u>.</li></ul></p>
 <br />
 <p>From <strong>Brussels Central</strong> ("<strong>Bruxelles Central</strong>", "<strong>Brussel Centraal</strong>" or "<strong>Gare Centrale</strong>") station (about <strong>20 minutes</strong>):
@@ -124,7 +129,7 @@ during both days. An alternative is to leave your car in the
 <a href="http://www.interparking.be/find-parking/Sablon-Poelaert/n-Poelaert/">
 Parking Sablon-Polaert</a>, from there to take the 
 <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, 
-direction Herrmann-Debroux, then get off at stop <u>ULB</u>.
+direction Mus&eacute;e du Tram, then get off at stop <u>ULB</u>.
 </p>
 
 
