Hashes are shouted out nowadays

--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -116,8 +116,8 @@ gpg --verify ksp-<%= klist %>.txt.asc ksp-<%= klist %>.txt
 
 <p>
   If you participated in the keysigning event, but missed (parts of) the
-  participant list hashes as they flashed by during the starting presentation,
-  you should verify the hashes before signing any keys.
+  participant list hashes as they were shouted out at the start, you should
+  verify the hashes before signing any keys.
 </p>
 
 <p>
