Rephrased keysigning list generation item

--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -48,9 +48,8 @@ gpg --keyserver ksp.fosdem.org --send-key [keyid]
 
 <p>
   If you have multiple keys, try to submit them together. Since the list is
-  sorted by submission time, this will cause your keys to be together on the
-  list of participants, saving everyone a lot of browsing forward and backward
-  through the list.
+  sorted by submission time, this will group your keys on the list, saving
+  everyone a lot of browsing forward and backward through the list.
 </p>
 
 <p>
