--- a/content/schedule/buildings.html
+++ b/content/schedule/buildings.html
@@ -3,7 +3,7 @@ title: Buildings
 forcepagelinks: true
 ---
 <p>
-The various sessions are spread over several buildings (clusters of rooms)
+The various events are spread over several buildings (clusters of rooms)
 over the campus.
 </p>
 <p>
