Writing 'devroom' as 'developer room' in room descriptions

--- a/content/schedule/devrooms/ada.html
+++ b/content/schedule/devrooms/ada.html
@@ -7,7 +7,7 @@ for open source development.
 </p>
 
 <p>
-This DevRoom aims to present the possibilities offered by the Ada
+This developer room aims to present the possibilities offered by the Ada
 Language (object-oriented, multi-core, embedded programming) as well
 as some of the many exciting tools and projects using Ada.
 </p>
