--- a/content/schedule/devrooms/bsd.html
+++ b/content/schedule/devrooms/bsd.html
@@ -1,4 +1,4 @@
-<p>The BSD devroom is a forum for talks about all BSD operating systems &ndash;
+<p>The BSD developer room is a forum for talks about all BSD operating systems &ndash;
 from FreeBSD, NetBSD, OpenBSD to Dragonfly and newer projects, such as
 EdgeBSD.</p>
 
