--- a/content/schedule/devrooms/example.html
+++ b/content/schedule/devrooms/example.html
@@ -1,7 +1,7 @@
 <!--
- * put stuff here to have a devroom description on the devroom page.
+ * put stuff here to have a developer room description on the developer room page.
  * use file 'example.html' for adding something to https://fosdem.org/schedule/track/example/
 -->
 <p>
-Example devroom description
+Example developer room description
 </p>
