--- a/content/schedule/devrooms/hpc_and_computational_science.html
+++ b/content/schedule/devrooms/hpc_and_computational_science.html
@@ -1,5 +1,5 @@
 <p>
-  The High-Performance Computing (HPC) and Computational Science devroom provides an opportunity for open source
+  The High-Performance Computing (HPC) and Computational Science developer room provides an opportunity for open source
   software developers in the HPC community to present their work and discuss it with FOSDEM attendees.
 </p>
 
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-  The devroom organisation is taken care of by the <a href="http://www.ugent.be/hpc/en">HPC team of Ghent University</a>
+  The developer room organisation is taken care of by the <a href="http://www.ugent.be/hpc/en">HPC team of Ghent University</a>
   (<a href="http://twitter.com/HPCUGent">@HPCUGent</a>), in collaboration with the
   <a href="https://vscentrum.be/nl/en">Flemish Supercomputer Centre (VSC)</a>.
 </p>
