--- a/content/schedule/devrooms/microkernel_based_operating_systems.html
+++ b/content/schedule/devrooms/microkernel_based_operating_systems.html
@@ -2,14 +2,14 @@
   Microkernels and component-based operating systems are pervasive
   parts of our computing landscape. They are currently used in
   situations where security and reliability are of utmost importance
-  or where resources are scarce. The microkernel devroom brings the
+  or where resources are scarce. The microkernel developer room brings the
   heads behind several projects together and offers a chance to get up
   to speed with developments in different groups.
 </p>
 
 <p>
-  Organization of the microkernel devroom is done in turns by groups
-  in the microkernel community. This year's devroom is organized by
+  Organization of the microkernel developer room is done in turns by groups
+  in the microkernel community. This year's developer room is organized by
   the <a href="http://os.inf.tu-dresden.de/">OS group of TU
   Dresden</a>.
 </p>
