--- a/content/schedule/devrooms/mysql.html
+++ b/content/schedule/devrooms/mysql.html
@@ -1,5 +1,5 @@
 <p>
-  The MySQL &amp; Friends Devroom gives the opportunity to the open source MySQL
+  The MySQL &amp; Friends developer room gives the opportunity to the open source MySQL
   community to present and discuss innovative development, share experiences and
   best practices in administering or deploying MySQL servers.  Proxies,
   Clusters, new features, new engines and performances will be covered by the
@@ -7,7 +7,7 @@
 </p>
 <p>
   This is the best place in Europe where the Community and the professionals
-  meets together. The devroom will end with the traditional Community dinner. 
+  meets together. The developer room will end with the traditional Community dinner. 
 </p>
 <p>
   Registration for the dinner is required this year, follow this <a
