--- a/content/schedule/devrooms/python.html
+++ b/content/schedule/devrooms/python.html
@@ -7,7 +7,7 @@
 </p>
 
 <p>
-  This devroom is a good occasion to discover Python ecosystem and meet the
+  This developer room is a good occasion to discover Python ecosystem and meet the
   community around this language.
 </p>
 
