--- a/content/schedule/devrooms/wine.html
+++ b/content/schedule/devrooms/wine.html
@@ -3,7 +3,7 @@ Wine is an LGPL implementation of the Windows API for Unix systems.  It allows u
 </p>
 
 <p>
-This devroom is a good place to learn more about the Wine ecosystem and to meet the core developers.  There are plenty of ways to contribute to Wine, and we're a merry bunch.  Come join us and learn why Alexandre is the most friendly of the pit vipers!
+This developer room is a good place to learn more about the Wine ecosystem and to meet the core developers.  There are plenty of ways to contribute to Wine, and we're a merry bunch.  Come join us and learn why Alexandre is the most friendly of the pit vipers!
 </p>
 
 <p>
