--- a/content/schedule/devrooms/javascript.html
+++ b/content/schedule/devrooms/javascript.html
@@ -1,6 +1,6 @@
 <p>
-  	The JavaScript devroom gives the opportunity to the open-source JavaScript community to present both its front-end as back-end expertise. The selected speakers will discuss a.o. Angular.js, d3.js, npm and even robotics.
+  	The JavaScript developer room gives the opportunity to the open-source JavaScript community to present both its front-end as back-end expertise. The selected speakers will discuss a.o. Angular.js, d3.js, npm and even robotics.
 </p>
 <p>
-	This devroom is coordinated by <a href="http://twitter.com/philip_roberts" target="_blank">Phil Roberts</a>, <a href="http://twitter.com/teabass" target="_blank">Andrew Nessbit</a>, <a href="http://twitter.com/stevenbeeckman" target="_blank">Steven Beeckman</a> and <a href="http://twitter.com/eschnou" target="_blank">Laurent Eschenauer</a>.
+	This developer room is coordinated by <a href="http://twitter.com/philip_roberts" target="_blank">Phil Roberts</a>, <a href="http://twitter.com/teabass" target="_blank">Andrew Nessbit</a>, <a href="http://twitter.com/stevenbeeckman" target="_blank">Steven Beeckman</a> and <a href="http://twitter.com/eschnou" target="_blank">Laurent Eschenauer</a>.
 </p>
