--- a/content/schedule/devrooms/software_defined_radio.html
+++ b/content/schedule/devrooms/software_defined_radio.html
@@ -1,3 +1,3 @@
 <p>
-The Software Defined Radio devroom has talks from various SDR projects.
+The Software Defined Radio developer room has talks from various SDR projects.
 </p>
