Minor corrections in developer room descriptions

--- a/content/schedule/devrooms/mysql.html
+++ b/content/schedule/devrooms/mysql.html
@@ -6,11 +6,11 @@
   speakers.
 </p>
 <p>
-  This is the best place in Europe where the Community and the professionals
-  meets together. The developer room will end with the traditional Community dinner. 
+  This is the best place in Europe for the Community and professionals
+  to meet. The developer room will end with the traditional Community dinner. 
 </p>
 <p>
-  Registration for the dinner is required this year, follow this <a
+  Registration for the dinner is required this year. Follow this <a
 	  href="http://www.eventbrite.com/e/fosdem-mysql-and-friends-community-dinner-2014-tickets-10152563591">link</a>
   to get more information and join the rest of the community for a great
   evening.
