--- a/content/schedule/devrooms/smalltalk.html
+++ b/content/schedule/devrooms/smalltalk.html
@@ -6,5 +6,5 @@
 
 <p>
 This year, we show two new smalltalk(like) environments, developments
-in two existing ones, and applications of smalltalk in a.o. TDD with animations
-and robot control.</p>
+in two existing ones, and applications of smalltalk in, among others, 
+TDD with animations and robot control.</p>
