Removed social media links from developer room descriptions

--- a/content/schedule/devrooms/hpc_and_computational_science.html
+++ b/content/schedule/devrooms/hpc_and_computational_science.html
@@ -11,7 +11,6 @@
 </p>
 
 <p>
-  The developer room organisation is taken care of by the <a href="http://www.ugent.be/hpc/en">HPC team of Ghent University</a>
-  (<a href="http://twitter.com/HPCUGent">@HPCUGent</a>), in collaboration with the
+  The developer room organisation is taken care of by the <a href="http://www.ugent.be/hpc/en">HPC team of Ghent University</a>, in collaboration with the
   <a href="https://vscentrum.be/nl/en">Flemish Supercomputer Centre (VSC)</a>.
 </p>
