--- a/content/schedule/devrooms/desktops.html
+++ b/content/schedule/devrooms/desktops.html
@@ -7,5 +7,5 @@ We invite developers and systems administrators to present their talks about Fre
 </p>
 
 <p>
-The developer room organisation is taken care of by a team that represents the major open source desktops: <a href="http://www.gnome.org">Gnome</a> (<a href="http://cfergeau.blogspot.com.es/">Christophe Fergeau</a>), <a href="http://www.kde.org">KDE</a> (<a href="http://www.elpauer.org">Pau Garcia i Quiles</a>), <a href="http://unity.ubuntu.com">Unity</a> (<a href="http://www.didrocks.fr/">Didier Roche</a>), <a href="http://www.enlightenment.org">Enlightenment</a> (<a href="https://github.com/puppetMaster">Philippe Caseiro</a>) and <a href="http://www.lxde.org">LXDE</a> (<a href="http://leclan.ch/">Jérome Leclanche</a>). Other desktops as invited to join as well.
+The developer room organisation is taken care of by a team that represents the major open source desktops: <a href="http://www.gnome.org">Gnome</a>, <a href="http://www.kde.org">KDE</a>, <a href="http://unity.ubuntu.com">Unity</a>, <a href="http://www.enlightenment.org">Enlightenment</a> and <a href="http://www.lxde.org">LXDE</a>. Other desktops as invited to join as well.
 </p>
