--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -25,6 +25,7 @@ UNFINISHED!! -->
 <li><b>Android: FOSDEM Companion</b><br />
     <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
     Available from the <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">android market</a>.<br />
+    Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdid=be.digitalia.fosdem">apk download</a>.<br />
 </li>
 <li><b>QT-based (Desktops, Maemo5): confclerk</b><br />
     <a href="http://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br />
