campusmap: update to the latest version
The campusmap.png image is now the same version as the one used in
the booklet.

--- a/content/index.html
+++ b/content/index.html
@@ -69,9 +69,9 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       <div class="location-text">
         <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
         <ul class="location-list">
-	  <li>Université libre de Bruxelles</li>
+	  <li>ULB</li>
           <li>Campus du Solbosch</li>
-          <li>Avenue Franklin D. Roosevelt 50</li>
+          <li>Av. F. D. Roosevelt 50</li>
           <li>1050 Bruxelles</li>
           <li>Belgium</li>
         </ul>
